refactor auth and cors, use lib instead of reinventing the wheel
