# api/resources/views/emails/organization_member/invited_plain.blade.php
@@ -1,0 +1,6 @@
+
+Hooray !
+You have been invited to bring great value to the organization {{ $organization->name }}.
+To create an account and participate, click on the link below :
+
+{{ $invitation_link }}
